<resources>
    <string name="app_name">Reservation</string>
    <string name="sign_out">Sign Out</string>
    <string name="createCustomer">Create Customer Account</string>
    <string name="createShop">Create Shop Account</string>
    <string name="startupText">Retrieving data from database</string>
    <string name="customerRegistration">Customer registration</string>
    <string name="createCustomerText">Fill any missing information</string>
    <string name="firstNameHint">First Name</string>
    <string name="surnameHint">Surname</string>
    <string name="phoneHintOptional">Phone number (optional)</string>
    <string name="mailHint">Email address</string>
    <string name="sendButtonText">Send</string>
    <string name="shopRegistration">Shop registration</string>
    <string name="shopNameHint">Shop Name</string>
    <string name="address1Text">Street Address</string>
    <string name="address2Text">Address Line 2</string>
    <string name="continueButton">Continue</string>
    <string name="cityHint">City</string>
    <string name="zipText">ZIP code</string>
    <string name="phoneHint">Phone Number</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tagsTextView">Insert at least one tag, customers will use it to find your shop.
        \nTags are single words of letters only, separate them with a space
        \nNumbers and symbols will be removed</string>
    <string name="noTagWarning">Enter at least one word that describes your shop</string>
    <string name="tagsAndHours">Tags and open hours</string>
    <string name="mondayText">Monday</string>
    <string name="fromText">From</string>
    <string name="toText">To</string>
    <string name="hoursText">Touch buttons to set opening hours, leave same time to set closed.</string>
    <string name="tuesdayText">Tuesday</string>
    <string name="wednesdayText">Wednesday</string>
    <string name="thursdayText">Thursday</string>
    <string name="fridayText">Friday</string>
    <string name="saturdayText">Saturday</string>
    <string name="sundayText">Sunday</string>
    <string name="morningText">Morning</string>
    <string name="afternoonText">Afternoon</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="registrations">Registration</string>
    <string name="selectDate">Select Date</string>
    <string name="pressBackToExit">Press again to exit</string>
    <string name="sorry">Sorry!</string>
    <string name="noFreeSlots">No free slots are available for this day</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="closedLowercase" translatable="false">closed</string>
    <string name="availableHours">available hours</string>
    <string name="timeDB" translatable="false">time</string>
    <string name="userLowercase" translatable="false">user</string>
    <string name="noReservations">No reservations found</string>
    <string name="noShopsFound">No shops found</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="welcome_are_you_a_customer_or_a_shop_owner">Welcome! Are you a customer or a shop owner?</string>
    <string name="wrongAddress">Can\'t find location, please check address</string>
    <string name="searchDistance">Search distance:</string>
    <string name="reservationCompleted">Reservation completed</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="onWithTabs">\t on \t</string>
    <string name="deleteReservationFor">Delete reservation for \n</string>
    <string name="edit">Edit</string>
    <string name="edit_opening_hours">Edit opening hours</string>
    <string name="edit_your_tags">Edit your tags</string>
    <string name="finish">finish</string>
    <string name="changeFieldsEditShop">Change the fields you wish to modify</string>
    <string name="reservationShopDetails">Shop Details</string>
    <string name="addressSearch">Address Search</string>
    <string name="addressSearchInput">Insert the address from where you want to search</string>
    <string name="refresh">Refresh</string>
    <string name="chat">Chat</string>
    <string name="write_a_message">Write a message...</string>
    <string name="conversations">Conversations</string>
    <string name="current_user_username_key">current_user_username_key</string>
    <string name="reservations_preferences">Reservations_Preferences</string>
    <string name="last_location_string_key">last_location_string_key</string>
    <string name="last_latitude_key">last_latitude_key</string>
    <string name="last_longitude_key">last_longitude_key</string>
    <string name="leave_a_review">Leave a review!</string>
    <string name="reviews">Reviews</string>
    <string name="need_update_key">need_update_key</string>
    <string name="isCustomer_key">isCustomer_key</string>
    <string name="isShop_key">isShop_key</string>
    <string name="history">History</string>
    <string name="past_reservations">Past Reservations</string>
    <string name="shopInfo">Shop info</string>
    <string name="name">Name</string>
    <string name="upload_error">Something went wrong uploading the image</string>
    <string name="enter_valid_mail_address">Enter a valid mail address</string>
    <string name="wait_for_image_upload">Wait for image upload to finish</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="rate">Rate</string>
    <string name="rating">Rating</string>
    <string name="address_search">Address Search</string>
    <string name="search_address">Search address</string>
    <string name="review_sent">Review sent!</string>
    <string name="new_reservation_from">New reservation from: </string>
</resources>
